# arclite

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  ci-pipeline.yml
.arc/: settings.json
.arc/findings/: README.md
.arc/hooks/: pre-push
.arc/meta-rules/: rule-captures-a-general-principle.md  rule-earns-inclusion-by-its-principle.md
.arc/rules/: account-for-consumed-cost-on-failure.md  best-effort-side-effects.md  claim-names-atomically.md  compare-ordered-values-by-parsed-form.md  confine-display-formatting-to-output.md  credential-not-forwarded-across-host-redirect.md  current-state-is-not-a-constraint.md  dispatch-through-one-registry.md  distinguish-absent-from-unreadable.md  drain-child-pipes-concurrently.md  enumerate-variants-over-catch-all.md  guard-mode-entry-on-environment-capability.md  guard-values-interpolated-into-commands.md  inconclusive-check-must-not-report-all-clear.md  isolate-ambient-config-by-default.md  keep-secrets-out-of-process-arguments.md  no-hardcoded-magic-values.md  no-silent-defaults.md  no-speculative-defensive-code.md  prefer-concision.md  prefer-machine-readable-tool-output.md  preview-must-share-execution-path.md  read-structured-data-not-reparsed-prose.md  recover-state-on-partial-mutation-failure.md  reject-unsupported-option-before-acting.md  (+6 more)
hooks/: pre-push
rules/: no-duplicated-logic.md  no-secrets-in-source.md  prefer-evidence-over-assumptions.md
src/: ai.rs  cli.rs  http.rs  lib.rs  log.rs  main.rs  output.rs  rules.rs  runs.rs  settings.rs  synth.rs  walk.rs
tests/: cli.rs
(+114 files in other folders)
