[package]
name = "arclite"
version = "0.0.0"
edition = "2024"
description = "Agent-first, cross-platform CLI for cross-repo code intelligence and auditing — a successor to arc."
publish = false

[[bin]]
name = "arc"
path = "src/main.rs"

[lib]
name = "arclite"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
