[package]
name = "arclite"
version = "0.1.3"
edition = "2024"
rust-version = "1.88"
description = "Agent-first, cross-platform CLI for cross-repo code intelligence and auditing — a successor to arc."
license = "MIT"
publish = false

[[bin]]
name = "arc"
path = "src/main.rs"

[lib]
name = "arclite"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
ignore = "0.4.26"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "8"

[dev-dependencies]
assert_cmd = "2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
